Edited the views and added Pure CSS elements,

--- a/app/views/main_pages/home.html.erb
+++ b/app/views/main_pages/home.html.erb
@@ -1,2 +1,15 @@
+<div class="pure-g-r">
+<div id="home-page-header" class="pure-u-1">
 <h1>Welcome to blogBase!</h1>
+</div>
+<div id="main-left-side" class="pure-u-1-3">
 <p>Find me in app/views/main_pages/home.html.erb</p>
+<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec placerat venenatis diam, at condimentum massa bibendum nec. Sed semper sit amet mauris non fringilla. Morbi aliquet lacinia augue, sit amet fermentum ante rutrum et. Praesent gravida, quam nec pharetra consequat, nunc sapien pulvinar nisi, sit amet hendrerit enim dui nec libero. Phasellus varius ligula lacus, ac dignissim nulla ullamcorper malesuada. Phasellus nec risus vel ipsum volutpat dictum quis vel nisi. Duis pharetra ornare justo, pretium condimentum tortor viverra nec. Nunc orci dui, volutpat quis metus porttitor, pretium vulputate felis. Nullam dignissim vitae ipsum a pellentesque. Integer fermentum congue turpis, sit amet euismod orci vulputate vitae.</p>
+</div>
+
+<div id="main-right-side" class="pure-u-1-2">
+<p>Proin dignissim fermentum porttitor. Nunc sagittis ligula id lorem auctor, vel egestas est hendrerit. Suspendisse potenti. Quisque dignissim sapien dolor, sed faucibus orci pharetra sed. Interdum et malesuada fames ac ante ipsum primis in faucibus. Donec luctus, enim a dapibus imperdiet, felis est cursus justo, sed egestas nunc dui et lectus. Phasellus tellus mauris, pretium non nulla non, hendrerit fringilla risus. Mauris sed magna mollis, varius mauris sit amet, suscipit velit. Sed vel risus ut lacus molestie pretium.</p>
+<p>Nunc tempor, purus sit amet blandit aliquet, dui enim adipiscing nisi, et lacinia augue tellus nec elit. Vivamus dignissim nec nunc sed sodales. Cras interdum, velit vitae vehicula lacinia, ipsum est feugiat nunc, ac dapibus justo ligula at nisi. Mauris turpis ligula, rhoncus eget ligula eget, sagittis interdum mauris. Nam fermentum odio quis orci varius, eu sollicitudin ante sodales. In a congue nibh, vel varius nunc. Pellentesque ornare dolor mollis risus porta, a rutrum lorem pellentesque. Praesent facilisis porttitor augue et iaculis. Ut egestas massa accumsan arcu sodales condimentum. Etiam nisi magna, varius non ultricies ac, tristique at libero. Sed facilisis nunc et tellus fringilla, eu vulputate nulla euismod. Nullam iaculis tincidunt dui. Aenean tempus at justo ut consectetur. Etiam libero quam, tempor sed nulla ut, dapibus iaculis urna.</p>
+<p>Vivamus in risus vitae sem pulvinar volutpat. Aliquam pretium lacus sem, at varius leo pulvinar eget. Nullam tempus enim at hendrerit euismod. Duis placerat egestas leo. In vel leo a tellus semper tempor. In lobortis velit eget arcu dignissim, eget volutpat ante auctor. Fusce iaculis venenatis vehicula. Mauris aliquet eros eros, id gravida ipsum sagittis ac. In hac habitasse platea dictumst. Etiam ullamcorper tellus turpis, sit amet pharetra ante laoreet sed. Curabitur felis lorem, vehicula at congue et, vehicula vel magna. Mauris id ornare elit. Vestibulum dapibus lacus nibh. Cras fermentum consequat felis, non facilisis libero porttitor vitae. Suspendisse egestas egestas consectetur.</p>
+</div>
+</div>
