--- a/app/views/main_pages/about.html.erb
+++ b/app/views/main_pages/about.html.erb
@@ -1,2 +1,8 @@
+<div class="pure-g-r">
+<div id="blogs-page-header" class="pure-u-1">
 <h1>MainPages#about</h1>
+</div>
+<div id="main-left-side" class="pure-u-1-3">
 <p>Find me in app/views/main_pages/about.html.erb</p>
+</div>
+</div>
