Polished responsiveness of home site.

--- a/app/assets/stylesheets/main_pages.css
+++ b/app/assets/stylesheets/main_pages.css
@@ -1,11 +1,5 @@
-#main-menu { margin: 2em 0 2em 3em; }
+.l-box { padding: 1.3em; }
 
-#main-left-side { margin: 0 2em 0 3em; }
+#main-left-side { padding-right:2em; }
 
-#main-right-side { margin: 0 0 0 3em; }
-
-#home-page-header { margin: 2em 0 0 3em; }
-
-#blogs-page-header { margin: 2em 0 0 3em; }
-
-#about-page-header { margin: 2em 0 0 3em; }
+#main-menu { padding-bottom:2em; }
