--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,10 +7,12 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-
+<div class="pure-g-r">
+<div class="pure-u-1">
 <%= render "menu" %>
 
 <%= yield %>
-
+</div>
+</div>
 </body>
 </html>
