--- a/app/views/main_pages/_menu.html.erb
+++ b/app/views/main_pages/_menu.html.erb
@@ -1,7 +1,9 @@
+<div class="l-box">
 <div id="main-menu" class="pure-menu pure-menu-open pure-menu-horizontal pure-u-1">
     <ul>
         <li><%= link_to "Home", main_pages_home_path, :id => "home_link" %></li>
         <li><%= link_to "Blogs", main_pages_blogs_path, :id => "blogs_link" %></li>
         <li><%= link_to "About", main_pages_about_path, :id => "about_link" %></li>
     </ul>
+</div>
 </div>
