Added scaffold for Blog model, also added a startout test for model

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,9 @@
 <body>
 <div class="pure-g-r">
 <div class="pure-u-1">
+<% if params[:controller] != "blogs" %>
 <%= render "menu" %>
+<% end %>
 
 <%= yield %>
 </div>
